--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,15 @@ __pycache__/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# pycharm
+.idea
+
 # temp
 *_FULL*
+
+# datasets
+assignments/classification/data/cifar10
+assignments/classification/data/mnist
+
+# models
+*.pth*
