--- a/assignments/classification/experiments/cfgs/params_fashion.yaml
+++ b/assignments/classification/experiments/cfgs/params_fashion.yaml
@@ -6,12 +6,14 @@ path_save: "experiments/"    # path to save models, checkpoints, logs
 
 TRAIN:
   resume: ""
-  epochs: 30
+  epochs: 20
   lr: 0.001
   momentum: 0.9
 
 MODEL:
   name: "lenet_in3x32x32_out10"
+  #name: "vgg19"
+  #name: "resnet18"
 
 DATASET:
   name: "fashion"
@@ -23,4 +25,4 @@ DATASET:
 LOG:
   iter_interval: 10     # how often (iter) display training details
   path: "experiments/"
-  visdom: True
+  visdom: False
